@@ -12,7 +12,6 @@ VERSION := $(shell cat $(VERSION_FILE))
 
 PL_FILES := $(wildcard *.pl)
 SH_FILES = $(wildcard *.sh)
-LIBS = libvfork.so.0
 CPPFLAGS := $(shell dpkg-buildflags --get CPPFLAGS)
 CFLAGS := $(shell dpkg-buildflags --get CFLAGS)
 CFLAGS += -std=c99
@@ -24,7 +23,7 @@ COMPLETION = $(patsubst %.bash_completion,devscripts.%,$(COMPL_FILES))
 
 GEN_MAN1S += devscripts.1 mk-origtargz.1
 
-all: $(SCRIPTS) $(GEN_MAN1S) $(LIBS) $(CWRAPPERS) $(COMPLETION)
+all: $(SCRIPTS) $(GEN_MAN1S) $(CWRAPPERS) $(COMPLETION)
 
 $(VERSION_FILE):
 	$(MAKE) -C .. version
@@ -73,11 +72,6 @@ devscripts.1: devscripts.1.in
 devscripts.%: %.bash_completion
 	cp $< $@
 
-libvfork.o: libvfork.c
-	$(CC) $(CPPFLAGS) $(CFLAGS) -fPIC -D_REENTRANT -c $<
-libvfork.so.0: libvfork.o
-	$(CC) $(LDFLAGS) -shared $< -lc -Wl,-soname -Wl,libvfork.so.0 -o $@
-
 clean:
 	python3 setup.py clean -a
 	find -name '*.pyc' -delete
@@ -85,17 +79,15 @@ clean:
 	rm -rf devscripts.egg-info
 	rm -f $(SCRIPTS) $(patsubst %,%.tmp,$(SCRIPTS)) \
 		$(GEN_MAN1S) $(SCRIPT_LIBS) $(CWRAPPERS) \
-		libvfork.o libvfork.so.0 $(COMPLETION)
+		$(COMPLETION)
 
 test:
 	$(foreach python,$(shell py3versions -r ../debian/control),$(python) setup.py test$(\n))
 
 install: all
 	python3 setup.py install --root="$(DESTDIR)" --no-compile --install-layout=deb
-	install -dD $(DESTDIR)$(BINDIR) $(DESTDIR)$(PKGLIBDIR)
 	cp $(SCRIPTS) $(DESTDIR)$(BINDIR)
 	ln -sf edit-patch $(DESTDIR)$(BINDIR)/add-patch
-	cp $(LIBS) $(DESTDIR)$(PKGLIBDIR)
 	install -dD $(DESTDIR)$(SYSCONFDIR)/bash_completion.d
 	cp $(COMPLETION) $(DESTDIR)$(SYSCONFDIR)/bash_completion.d
 	# Special treatment for debpkg
